2002-09-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/trip.ly (fugaIILeft): add arpeggio

	* lily/translator-group.cc (try_music_on_nongroup_children):
	oops. The name symbol is in the cdr of the assoc handle.

	* lily/:  remove Arpeggio_req, Breathing_sign_req, Extender_req,
	Hyphen_req, Glissando_req, Break_req, Mark_req 

2002-09-26  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/musical-request.cc (music-duration-length,
	music-duration-compress): new functions.

	* lily/ : Remove Note_req, Rest_req, Busy_playing_req. Changes
	throughout. Warning doesn't work yet.

	* lily/translator-group.cc (try_music_on_nongroup_children):
	new implementation: store candidate acceptors in a hashTable.

2002-09-25  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/music-types.scm (music-descriptions): change name to
	internal-class-name

	* scm/chord-name.scm (chord::inner-name-banter): remove space.

2002-09-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/beam.cc (connect_beams): don't crash if there are quarter
	notes in beams.

2002-09-24  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely: corrected ancient clef
	docu; added docu on ligatures

2002-09-21  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/glossary.tely,
	Documentation/user/refman.itely, input/les-nereides.ly,
	input/mutopia/W.A.Mozart/mozart-hrn3-defs.ly,
	input/test/bagpipe.ly, lily/stem.cc, ly/grace-init.ly,
	scm/grob-property-description.scm, scripts/convert-ly.py: renamed
	Stem properties: flag-style -> stroke-style, style -> flag-style.

2002-09-24  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/music-functions.scm (music-separator?): don't use name music
	property.

2002-09-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-targets.make (help): Document check
	target.

	* lily/new-accidental-engraver.cc: Compile fix.

2002-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/convert-ly.py: Add rule.

	* input/test/music-creation.ly: