@@ -496,7 +496,7 @@ when to start and stop a beam.  Overriding beaming is done through
 stemRightBeamCount.
 ",
 /* creats*/       "Beam",
-/* accepts */     "general-music",
+/* accepts */     "",
 /* acks  */      "stem-interface rest-interface beam-interface bar-line-interface",
 /* reads */       "autoBeaming autoBeamSettings beatLength subdivideBeams",
 /* write */       "");
