@@ -112,7 +112,7 @@ ENTER_DESCRIPTION(Bar_engraver,
 /* descr */       "Create barlines. This engraver is controlled through the
 @code{whichBar} property. If it has no bar line to create, it will forbid a linebreak at this point",
 /* creats*/       "BarLine",
-/* accepts */     "general-music",
+/* accepts */     "",
 /* acks  */      "",
 /* reads */       "whichBar",
 /* write */       "");
