@@ -148,7 +148,7 @@ Break_align_engraver::add_to_group(SCM align_name, Item*item)
 ENTER_DESCRIPTION(Break_align_engraver,
 /* descr */       "Align grobs with corresponding break-align-symbols into groups, and order the groups according to breakAlignOrder",
 /* creats*/       "BreakAlignment BreakAlignGroup LeftEdge",
-/* accepts */     "general-music",
+/* accepts */     "",
 /* acks  */       "break-aligned-interface"
 ,/* reads */       "breakAlignOrder",
 /* write */       "");
