@@ -47,7 +47,7 @@ Font_size_engraver::acknowledge_grob (Grob_info gi)
 ENTER_DESCRIPTION(Font_size_engraver,
 /* descr */       "Puts fontSize into font-relative-size grob property.",
 /* creats*/       "",
-/* accepts */     "general-music",
+/* accepts */     "",
 /* acks  */      "font-interface",
 /* reads */       "fontSize",
 /* write */       "");
